<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextTableName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextTableName"
                android:layout_alignBottom="@+id/editTextTableName"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/newDimension"
                android:text="@string/listLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="48dp"
                android:ems="12"
                android:hint="@string/taskHint"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences" >
            </EditText>

            <ImageButton
                android:id="@+id/buttonCompleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignTop="@+id/editTextTask"
                android:background="@drawable/check_all1"
                android:contentDescription="@string/completeAll"
                android:src="@drawable/check_all1" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listViewTasks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <requestFocus>
            </requestFocus>
        </ListView>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:checkedButton="@+id/radio_all"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all" />

        <RadioButton
            android:id="@+id/radio_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/radio_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/completed" />
    </RadioGroup>

</RelativeLayout>